@@ -4,6 +4,7 @@ export("U<-")
 export("V<-")
 export("gdata<-")
 export("select_matrix<-")
+export("shift_matrix<-")
 export(C_code)
 export(Nn)
 export(SEIR)
@@ -28,6 +29,7 @@ export(package_skeleton)
 export(prevalence)
 export(run_outer)
 export(select_matrix)
+export(shift_matrix)
 export(trajectory)
 export(u0_SEIR)
 export(u0_SIR)
